--- a/index.css
+++ b/index.css
@@ -4,5 +4,7 @@
 }
 
 body {
-    font-family: 'Montserrat';
+    font-family: 'Montserrat', sans-serif;
+    background-color: #3e4560;
+    color: white;
 }
