--- a/index.css
+++ b/index.css
@@ -24,3 +24,20 @@ label {
     font-size: 20px;
     margin-bottom: 5px;
 }
+
+input {
+    margin-bottom: 25px;
+}
+
+input[type='text']{
+    padding: 5px 10px;
+    border-radius: 3px;
+    border: none;
+}
+
+.box {
+    height: 100px;
+    width: 100%;
+    background-color: #3c6d5c;
+    margin-bottom: 25px;
+}
