--- a/index.css
+++ b/index.css
@@ -38,6 +38,6 @@ input[type='text']{
 .box {
     height: 100px;
     width: 100%;
-    background-color: #3c6d5c;
+    background-color: #c6d5ac;
     margin-bottom: 25px;
 }
